# sh1pt

./: .gitignore  CLI_INTEGRATIONS.md  README.md  TARGETS.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sh1pt.config.ts  tsconfig.base.json  vitest.config.ts
.github/workflows/: publish.yml
boilerplates/axum-supabase/: Cargo.toml  README.md  sh1pt.config.ts
boilerplates/axum-supabase/src/: main.rs
boilerplates/bun-hono-supabase/: README.md  package.json  sh1pt.config.ts  tsconfig.json
boilerplates/bun-hono-supabase/src/: index.ts
boilerplates/chrome-ext-react/: README.md  package.json  sh1pt.config.ts
boilerplates/chrome-ext-react/src/: manifest.json
boilerplates/expo-supabase/: README.md  package.json  sh1pt.config.ts
boilerplates/expo-supabase/app/: index.tsx
boilerplates/expo-supabase/lib/: supabase.ts
boilerplates/fastapi-supabase/: README.md  pyproject.toml  sh1pt.config.ts
boilerplates/fastapi-supabase/app/: main.py
boilerplates/hello-world/: README.md  package.json  sh1pt.config.ts
boilerplates/next-plugin-store/: README.md  package.json  sh1pt.config.ts  tsconfig.json
boilerplates/next-plugin-store/app/: page.tsx
boilerplates/next-plugin-store/supabase/: schema.sql
boilerplates/next-supabase/: .env.example  README.md  next.config.mjs  package.json  sh1pt.config.ts
boilerplates/tauri-supabase/: README.md  package.json  sh1pt.config.ts
docs/prd/: entityctl.md
scripts/: bump-and-publish-prep.mjs  version.mjs
sites/sh1pt.com/: README.md  middleware.ts  package.json  sh1pt.config.ts  tsconfig.json
(+56 files in other folders)
