[package]
name = "sh1pt-axum-supabase"
version = "0.1.0"
edition = "2021"
description = "Axum + Supabase backend boilerplate (Rust) — waitlist + payments + referrals API"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
postgrest = "1.6"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
