[project]
name = "sh1pt-fastapi-supabase"
version = "0.1.0"
description = "FastAPI + Supabase backend boilerplate (Python) — waitlist / payments / referrals"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "supabase>=2.10.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.ruff]
line-length = 100
